fix: Sidebar overflow scroll not working

--- a/src/index.css
+++ b/src/index.css
@@ -311,12 +311,16 @@ button {
   position: fixed;
   display: flex;
   width: var(--sidebar-width);
-  height: 100%;
-  overflow-y: scroll;
+  height: calc(100vh - var(--navbar-height));
   transition: transform 350ms ease, width 350ms ease;
   z-index: 2;
   border-right: 1px solid var(--box-border-color);
   padding-top: 10px;
+
+  & ul {
+    overflow-y: scroll;
+    height: 100%;
+  }
 
   &.hide {
     transform: translateX(calc(var(--sidebar-width) * -1));
